redirect link fixed for contact and cient

--- a/TTW/index.html
+++ b/TTW/index.html
@@ -67,9 +67,9 @@
               <li><a href="services.html#POS">Point Of Sale</a></li>
             </ul>
           </li>
-          <li><a href="client.html">Clients</a></li>
+          <li><a href="index.html#clients">Clients</a></li>
           
-          <li><a href="contactus.html">Contact Us</a></li>
+          <li><a href="index.html#contact">Contact Us</a></li>
         </ul>
       </nav>
       <!-- NAVBAR END -->
